# git-chronicle

./: Cargo.toml
docs/: implementationPlan.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: audit.rs  batcher.rs  cli.rs  error.rs  ingester.rs  main.rs  reducer.rs  templates.rs  types.rs
src/llm/: claude.rs  mod.rs  ollama.rs
templates/: batch.tera  final.tera  reduce.tera
tests/: pipeline.rs
